test-data/commandline.test
-- Test cases for invoking mypyc on the command line
--
-- These are slow -- do not add test cases unless you have a very good reason to do so.

[case testCompileMypyc]
# cmd: a.py b.py p/__init__.py p/q.py
import os.path
import p
import p.q
import a
import b
print('<main>', b.g(a.A()))
try:
    a.f('')
except TypeError:
    pass
else:
    assert False
for x in [a, b, p, p.q]:
    assert os.path.splitext(x.__file__)[1] != '.py'
[file z.py]

[file a.py]
import b
import c
from p import s

print('<a>', ord('A') == 65)  # Test full builtins

class A:
    def __init__(self) -> None:
        self.x = 4

def f(x: int) -> b.B:
    return b.B(x)

class B:
    def __init__(self, x: int, y: str) -> None:
        self.x = x

print('<a>', f(5).x)
print('<c>', c.foo())
assert s.bar(10) == 20

[file b.py]
import a
import p.q

class B:
    def __init__(self, x: int) -> None:
        self.x = x

def g(z: 'a.A') -> int:
    return p.q.foo(z.x)

print('<b>', 'here')

[file c.py]
def foo() -> int:
    return 10

[file p/__init__.py]

[file p/q.py]
import p.r
def foo(x: int) -> int:
    return x*p.r.foo(x)

[file p/r.py]
def foo(x: int) -> int:
    return x

[file p/s.py]
def bar(x: int) -> int:
    return x*2

[out]
<b> here
<a> True
<a> 5
<c> 10
<main> 16

-- This test is here so we can turn it on when we get nervous about
-- this case, but is disabled for speed reasons.
[case testCompileMypycOne-skip]
# cmd: a.py
import os.path
import a
assert os.path.splitext(a.__file__)[1] != '.py'
assert a.f(10) == 100

[file a.py]
def f(x: int) -> int:
    return x*x

[case testErrorOutput]
# cmd: test.py foo/__init__.py foo/bar.py

[file test.py]
from typing import List, Any
from typing_extensions import Final
from mypy_extensions import trait

def args(*x: int) -> int:
    return sum(x)

def foo(x: List[int]) -> List[int]:
    return [1, 2, *x]

def busted(b: bool) -> None:
    for i in range(1, 10, 0):
        try:
            if i == 5:
                break
            elif i == 4:
                continue
        finally:
            print('oops')
    reveal_type(b)  # type: ignore
    reveal_locals()  # type: ignore

print(foo([1,2,3]))

x = [1,2]

class Foo:
    a, b = (10, 20)
    x[0] = 10
    lol = 20
    l = [10]
    c = d = 50

    if 1+1 == 2:
        x = 10

Foo.lol = 50

print(x)
del x

def decorator(x: Any) -> Any:
    return x

class NeverMetaclass(type):
    pass

@decorator
class Wrong(metaclass=NeverMetaclass):
    pass

class Concrete1:
    pass

@trait
class Trait1(Concrete1):
    pass

class Concrete2:
    pass

@trait
class Trait2(Concrete2):
    pass

cmplx = 2+5j

def warning(x: List[int] = []) -> None:
    pass

# check that concrete bases need to come first and that non-trait MRO must be linear
class Nope(Trait1, Concrete2):
    pass

iterator_warning = (i+1 for i in range(10))

d1 = {1: 2}
d2 = {2: 3, **d1}

async def aio(x: Any) -> Any:
    await x

def yieldfrom(x: Any) -> Any:
    yield from x

[file foo/__init__.py]
x = 20

[file foo/bar.py]
from . import x


[out]
test.py:45: error: Inheriting from most builtin types is unimplemented
test.py:48: error: Metaclasses are not supported
test.py:48: error: Class decorators are not supported
test.py:72: error: Non-trait bases appear first in parent list
test.py:72: error: Non-trait MRO must be linear
test.py:5: error: Accepting *args or **kwargs is unimplemented
test.py:9: error: Star expressions (in non call contexts) are unimplemented
test.py:12: error: range() step can't be zero
test.py:15: error: break inside try/finally block is unimplemented
test.py:17: error: continue inside try/finally block is unimplemented
test.py:28: error: Only assignment to variables is supported in class bodies
test.py:29: error: Only assignment to variables is supported in class bodies
test.py:32: error: Multiple assignment in class bodies not supported
test.py:34: error: Unsupported statement in class body
test.py:31: warning: Unsupported default attribute value
test.py:37: error: Only class variables defined as ClassVar can be assigned to
test.py:40: error: Unimplemented del operation
test.py:66: error: complex literals are unimplemented
test.py:68: warning: Unsupported default argument value
test.py:75: warning: Treating generator comprehension as list
test.py:78: error: **args in dict expressions is unimplemented
test.py:80: error: async functions are unimplemented
test.py:81: error: await is unimplemented
test.py:84: error: yield from is unimplemented
foo/bar.py:1: error: Relative imports are unimplemented
Aborting due to 22 errors

